--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "basem khirat",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "csurf": "^1.9.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
@@ -19,6 +21,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
     "i18n": "^0.8.3",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4"
   }
 }
