--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mvc",
+  "name": "expressmvc",
   "version": "0.0.1",
   "description": "express light-weight mvc",
   "main": "server.js",
@@ -20,11 +20,12 @@
     "express": "^4.16.2",
     "express-back": "0.0.2",
     "express-flash": "0.0.2",
+    "express-mvc-generate": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "i18n": "^0.8.3",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.12.4",
+    "mongoose": "^4.12.5",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
