--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "express-mvc",
-  "version": "0.0.1",
-  "description": "express light-weight mvc",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "basem khirat",
-  "license": "MIT",
-  "dependencies": {
-    "express-mvc-platform": "*"
-  }
+    "name": "express-mvc",
+    "version": "0.0.1",
+    "description": "express light-weight mvc",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js"
+    },
+    "author": "basem khirat",
+    "license": "MIT",
+    "dependencies": {
+        "express-mvc-platform": "0.1.*"
+    }
 }
